--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@tanstack/react-devtools": "^0.4.0",
+    "@tanstack/react-query": "^5.85.3",
     "axios": "^1.11.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.5",
@@ -18,7 +20,9 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "yup": "^1.7.0",
     "zod": "^4.0.15"
   },
